--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -59,7 +59,7 @@
 						<img src="./img/nat-2-large.jpg" alt="" class="composition__photo composition__photo--p2">
 						<img src="./img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3">
 					</div>
-				
+
 				</div>
 			</div>
 		</section>
@@ -74,7 +74,8 @@
 						<i class="feature-box__icon icon-basic-world "></i>
 						<h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
 						<p class="feature-box__text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque modi!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque
+							modi!
 						</p>
 					</div>
 				</div>
@@ -83,7 +84,8 @@
 						<i class="feature-box__icon icon-basic-compass "></i>
 						<h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
 						<p class="feature-box__text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque modi!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque
+							modi!
 						</p>
 					</div>
 				</div>
@@ -92,7 +94,8 @@
 						<i class="feature-box__icon icon-basic-map "></i>
 						<h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
 						<p class="feature-box__text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque modi!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque
+							modi!
 						</p>
 					</div>
 				</div>
@@ -101,10 +104,123 @@
 						<i class="feature-box__icon icon-basic-heart "></i>
 						<h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
 						<p class="feature-box__text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque modi!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi aspernatur necessitatibus perferendis atque
+							modi!
 						</p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="section-tours">
+			<div class="u-center-text u-margin-bottom-big">
+				<h2 class="heading-secondary">
+					Most popular tours
+				</h2>
+			</div>
+			<div class="row">
+				<div class="col-1-of-3">
+					<div class="card">
+						<div class="card__side card__side--front">
+							<!-- Card FRONT -->
+							<div class="card__picture card__picture--1">
+								&nbsp;
+							</div>
+							<h4 class="card__heading">
+								<span class="card__heading-span card__heading-span--1">The sea explorer</span>
+
+							</h4>
+							<div class="card__details">
+								<ul>
+									<li>3 day tours</li>
+									<li>Up to 30 people</li>
+									<li>2 tour guildes</li>
+									<li>Sleep in cozy hotles</li>
+									<li>Difficulty: easy</li>
+								</ul>
+							</div>
+						</div>
+						<div class="card__side card__side--back card__side--back-1">
+							<!-- Card BACK -->
+							<div class="card__cta">
+								<div class="card__price-box">
+									<p class="card__price-only">Only</p>
+									<p class="card__price-value">$297</p>
+								</div>
+								<a href="#" class="btn btn--white">Book now!</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-1-of-3">
+					<div class="card">
+						<div class="card__side card__side--front">
+							<!-- Card FRONT -->
+							<div class="card__picture card__picture--2">
+								&nbsp;
+							</div>
+							<h4 class="card__heading">
+								<span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+
+							</h4>
+							<div class="card__details">
+								<ul>
+									<li>7 day tours</li>
+									<li>Up to 40 people</li>
+									<li>6 tour guildes</li>
+									<li>Sleep in provided tents</li>
+									<li>Difficulty: medium</li>
+								</ul>
+							</div>
+						</div>
+						<div class="card__side card__side--back card__side--back-2">
+							<!-- Card BACK -->
+							<div class="card__cta">
+								<div class="card__price-box">
+									<p class="card__price-only">Only</p>
+									<p class="card__price-value">$797</p>
+								</div>
+								<a href="#" class="btn btn--white">Book now!</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-1-of-3">
+					<div class="card">
+						<div class="card__side card__side--front">
+							<!-- Card FRONT -->
+							<div class="card__picture card__picture--3">
+								&nbsp;
+							</div>
+							<h4 class="card__heading">
+								<span class="card__heading-span card__heading-span--3">The snow adventurer</span>
+
+							</h4>
+							<div class="card__details">
+								<ul>
+									<li>5 day tours</li>
+									<li>Up to 15 people</li>
+									<li>3 tour guildes</li>
+									<li>Sleep in provided tents</li>
+									<li>Difficulty: hard</li>
+								</ul>
+							</div>
+						</div>
+						<div class="card__side card__side--back card__side--back-3">
+							<!-- Card BACK -->
+							<div class="card__cta">
+								<div class="card__price-box">
+									<p class="card__price-only">Only</p>
+									<p class="card__price-value">$897</p>
+								</div>
+								<a href="#" class="btn btn--white">Book now!</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="u-center-text u-margin-top-huge">
+				<a href="#" class="btn btn--green">Discover all tours</a>
 			</div>
 		</section>
 	</main>
