Build stories section with story components

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -223,6 +223,55 @@
 				<a href="#" class="btn btn--green">Discover all tours</a>
 			</div>
 		</section>
+
+		<section class="section-stories">
+			<div class="u-center-text u-margin-bottom-big">
+				<h2 class="heading-secondary">
+					We make people genuinely happy
+				</h2>
+			</div>
+			<div class="row">
+				<div class="story">
+					<figure class="story__shape">
+						<img class="story__image" src="./img/nat-8.jpg" alt="person on a tour">
+						<figcaption class="story__caption">
+							Mary Smith
+						</figcaption>
+					</figure>
+					<div class="story__text">
+						<h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi in sint sit perspiciatis ea dolor veritatis quod
+							incidunt at reprehenderit sapiente eius quibusdam dolore hic quidem, laborum doloremque rem explicabo.
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, tempore dignissimos. Tempora iusto expedita
+							sapiente autem consectetur, incidunt repudiandae quisquam.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="story">
+					<figure class="story__shape">
+						<img class="story__image" src="./img/nat-9.jpg" alt="person on a tour">
+						<figcaption class="story__caption">
+							Jack Wilson
+						</figcaption>
+					</figure>
+					<div class="story__text">
+						<h3 class="heading-tertiary u-margin-bottom-small">Wow, My life is completely diffrent now.</h3>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi in sint sit perspiciatis ea dolor veritatis quod
+							incidunt at reprehenderit sapiente eius quibusdam dolore hic quidem, laborum doloremque rem explicabo.
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, tempore dignissimos. Tempora iusto expedita
+							sapiente autem consectetur, incidunt repudiandae quisquam.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="u-center-text u-margin-top-huge">
+				<a href="#" class="btn-text">Read all stories &rarr;</a>
+			</div>
+		</section>
 	</main>
 	<!-- <section class="grid-test">
 		<div class="row">
