--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -15,6 +15,25 @@
 </head>
 
 <body>
+	<div class="navigation">
+		<input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+		<label for="navi-toggle" class="navigation__button">
+			<span class="navigation__icon">&nbsp;</span>
+		</label>
+
+		<div class="navigation__background">&nbsp;</div>
+
+		<nav class="navigation__nav">
+			<ul class="navigation__list">
+				<li class="navigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+				<li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benifits</a></li>
+				<li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+				<li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+				<li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+			</ul>
+		</nav>
+	</div>
 	<header class="header">
 		<div class="header__logo-box">
 			<img src="./img/logo-white.png" alt="Logo" class="logo">
@@ -343,7 +362,8 @@
 			</div>
 			<div class="col-1-of-2">
 				<p class="footer__copyright">
-					Buiuld my <a href="#" class="footer__link"> Jonas Schemedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schemedtmann. 
+					Buiuld my <a href="#" class="footer__link"> Jonas Schemedtmann</a> for his online course <a href="#" class="footer__link">Advanced
+						CSS and Sass</a>. Copyright &copy; by Jonas Schemedtmann.
 				</p>
 			</div>
 		</div>
