--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -131,7 +131,7 @@
 			</div>
 		</section>
 
-		<section class="section-tours">
+		<section class="section-tours" id="section-tour">
 			<div class="u-center-text u-margin-bottom-big">
 				<h2 class="heading-secondary">
 					Most popular tours
@@ -166,7 +166,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$297</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now!</a>
+								<a href="#popup" class="btn btn--white">Book now!</a>
 							</div>
 						</div>
 					</div>
@@ -199,7 +199,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$797</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now!</a>
+								<a href="#popup" class="btn btn--white">Book now!</a>
 							</div>
 						</div>
 					</div>
@@ -232,7 +232,7 @@
 									<p class="card__price-only">Only</p>
 									<p class="card__price-value">$897</p>
 								</div>
-								<a href="#" class="btn btn--white">Book now!</a>
+								<a href="#popup" class="btn btn--white">Book now!</a>
 							</div>
 						</div>
 					</div>
@@ -299,7 +299,7 @@
 				<a href="#" class="btn-text">Read all stories &rarr;</a>
 			</div>
 		</section>
-		<section class="section-book">
+		<section class="section-book" id="section-book">
 			<div class="row">
 				<div class="book">
 					<div class="book__form">
@@ -368,6 +368,24 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="popup" id="popup">
+		<div class="popup__content">
+			<div class="popup__left">
+				<img src="./img/nat-8.jpg" alt="tour photo" class="popup__img">
+				<img src="./img/nat-9.jpg" alt="tour photo" class="popup__img">
+			</div>
+			<div class="popup__right">
+				<a href="#section-tour" class="popup__close">&times;</a>
+				<h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h2>
+				<h3 class="heading-tertiary u-margin-bottom-small">Imortant &ndash; Please read these terms before booking</h3>
+				<p class="popup__text">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit vitae non provident aperiam tempore cum possimus est, inventore illo, repellat quae eaque minima corporis hic ducimus fugit quo, autem facere?
+				</p>
+				<a href="#section-book" class="btn btn--green">Book now</a>
+			</div>
+		</div>
+	</div>
 	<!-- <section class="grid-test">
 		<div class="row">
 			<div class="col-1-of-2">
